src/components/jobs/JobCard/JobCard.module.scss
.card {
  height: 100%;
  width: 100%;
  overflow: unset;
}

.content {
  flex: 1;
}

.header + .content {
  margin-top: 1rem;
}

.footer {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 0.75rem;
  justify-content: space-between;
}

.applyButton {
  pointer-events: none;
}

